texto.txt
[nodemon] watching extensions: js,mjs,cjs,json
[nodemon] starting `node server.js`
F:\Documentos\Desenvolvimento\BelaFarma\backend\server.js:762
const app = express();
      ^

SyntaxError: Identifier 'app' has already been declared
    at internalCompileFunction (node:internal/vm:77:18)
    at wrapSafe (node:internal/modules/cjs/loader:1288:20)
    at Module._compile (node:internal/modules/cjs/loader:1340:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1435:10)
    at Module.load (node:internal/modules/cjs/loader:1207:32)
    at Module._load (node:internal/modules/cjs/loader:1023:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:135:12)
    at node:internal/main/run_main_module:28:49

Node.js v20.10.0
[nodemon] app crashed - waiting for file changes before starting...